--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -90,17 +90,17 @@
         <a-mixin id="videoFrame" geometry="primitive: plane; height: 2.15; width: 3.2" material="shader: flat; src: assets/misc/videoFrame.png"></a-mixin>
         <a-mixin id="videoPlayer" geometry="primitive: plane; height: 2; width: 3" material="shader: flat" rotation="180 0 0"></a-mixin>
         
-        <video id="qalandia_checkpoint_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_0.mp4?v=1561130812264"></video>
+        <video id="qalandia_checkpoint_vid" preload="auto" src="assets/qalandia/qalandia-checkpoint-video.mp4"></video>
         <video id="qalandia_traffic_vid" preload="auto" src="assets/qalandia/qala-traffic-video.mp4"></video>
-        <video id="jericho_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FVID_20190120_170302.mp4?v=1561392208546"></video>
-        <video id="bethlehem_vid1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FDj-bland.mp4?v=1561061953843"></video>
-        <video id="ramallah_interview1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F00040.mp4?v=1561134542402"></video>
-        <video id="ramallah_interview2" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F00125_Trim.mp4?v=1561135763147"></video>
-        <video id="ramallah_chant1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2FVID_20190109_132642.mp4?v=1561404719315"></video>
-        <video id="ramallah_chant2" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fmega-phone-crowd.mp4?v=1561404731434"></video>
-        <video id="jerusalem_gate_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_1.mp4?v=1561138342770"></video>
-        <video id="jerusalem_roof_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Forigin_0%20(1).mp4?v=1561138975151"></video>
-        <video id="qalqilya_vid1" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Fchildren-play-wall-filth.mp4?v=1561392888941"></video>
+        <video id="jericho_vid" preload="auto" src="assets/jericho/jeri-dog-playing.mp4"></video>
+        <video id="bethlehem_vid1" preload="auto" src="assets/bethlehem/beth-wall-video.mp4"></video>
+        <video id="ramallah_interview1" preload="auto" src="assets/ramallah/rama-interview-1.mp4"></video>
+        <video id="ramallah_interview2" preload="auto" src="assets/ramallah/rama-interview-2.mp4"></video>
+        <video id="ramallah_chant1" preload="auto" src="assets/ramallah/rama-chant-1.mp4"></video>
+        <video id="ramallah_chant2" preload="auto" src="assets/ramallah/rama-chant-video.mp4"></video>
+        <video id="jerusalem_gate_vid" preload="auto" src="assets/jerusalem/jeru-castle-video.mp4"></video>
+        <video id="jerusalem_roof_vid" preload="auto" src="assets/jerusalem/jeru-rooftop-video.mp4"></video>
+        <video id="qalqilya_vid1" preload="auto" src="assets/qalqilya/qalq-kids-playing-video.mp4"></video>
         <video id="qalqilya_vid2" preload="auto" src="assets/qalqilya/qalq-kids-playing-2video.mp4"></video>
         <video id="kafr-qaddam_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F3d(2).mp4?v=1559745270352"></video>
       </a-assets>
