--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -102,7 +102,7 @@
         <video id="jerusalem_roof_vid" preload="auto" src="assets/jerusalem/jeru-rooftop-video.mp4"></video>
         <video id="qalqilya_vid1" preload="auto" src="assets/qalqilya/qalq-kids-playing-video.mp4"></video>
         <video id="qalqilya_vid2" preload="auto" src="assets/qalqilya/qalq-kids-playing-2video.mp4"></video>
-        <video id="kafr-qaddam_vid" preload="auto" src="https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2F3d(2).mp4?v=1559745270352"></video>
+        <video id="kafr-qaddam_vid" preload="auto" src="assets/kafr-qaddam/kafr-parade-video.mp4"></video>
       </a-assets>
 
       
