--- a/views/palestine_no_preload.hbs
+++ b/views/palestine_no_preload.hbs
@@ -23,10 +23,46 @@
     <!-- Application components. -->
     <script src="./scripts/scripts.js"></script>
     <script>AFRAME.registerComponent('raycastable', {});</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+    <script src="easyrtc/easyrtc.js"></script>
+    <script src="https://unpkg.com/networked-aframe@^0.6.0/dist/networked-aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-randomizer-components@^3.0.1/dist/aframe-randomizer-components.min.js"></script>
+    
   </head>
   <body>
-    <a-scene spectator render-order="menuBackground, menuItem, button">
+    <a-scene networked-scene="room: basic; debug: true" spectator render-order="menuBackground, menuItem, button">
       <a-assets>
+        <!-- Avatar -->
+          <template id="avatar-template">
+            <a-entity class="avatar" material="shader: flat">
+              <a-sphere class="head"
+                color="#5985ff"
+                scale="0.45 0.5 0.4"
+                random-color
+              ></a-sphere>
+              <a-entity class="face"
+                position="0 0.05 0">
+                <a-sphere class="eye"
+                  color="#efefef"
+                  position="0.16 0.1 -0.35"
+                  scale="0.12 0.12 0.12">
+                  <a-sphere class="pupil"
+                    color="#000"
+                    position="0 0 -1"
+                    scale="0.2 0.2 0.2"></a-sphere>
+                </a-sphere>
+                <a-sphere class="eye"
+                  color="#efefef"
+                  position="-0.16 0.1 -0.35"
+                  scale="0.12 0.12 0.12">
+                  <a-sphere class="pupil"
+                    color="#000"
+                    position="0 0 -1"
+                    scale="0.2 0.2 0.2"
+                  ></a-sphere></a-sphere>
+              </a-entity>
+            </a-entity>
+          </template>
         <!-- Images -->
         <img id="mapIsrael" src="assets/misc/israelMap.png">
         <img id="pin_src" src="assets/misc/map-pin.png">
@@ -315,6 +351,10 @@
       <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: [raycastable]"></a-entity>
       <a-entity id="leftHand" laser-controls="hand: left" raycaster="objects: [raycastable]"></a-entity>
       <a-entity id="rightHand" laser-controls="hand: right" raycaster="objects: [raycastable]"></a-entity>
+      
+      <a-entity id="player" camera networked="template:#avatar-template;attachTemplateToLocal:false;" position="0 1.6 0" spawn-in-circle="radius:1" wasd-controls look-controls>
+        <a-sphere class="head" visible="false"random-color></a-sphere>
+      </a-entity>
 
       <a-entity
         id="observerCamera"
@@ -324,7 +364,37 @@
         observer="canvas: #cameraObserver;"
       ></a-entity>
 
+      <a-entity id="Screenshot" share-to geometry="primitive: plane; height: 1; width 3" material="shader: flat; color: white" position="1 1 -2">
+        <a-entity id="twitter" website-link="url: http://twitter.com" geometry="primitive: plane; height: 0.9; width: 0.9" raycastable material="shader: flat; src: https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Ftwitter-square-icon-20.jpg?v=1562779143244" position="-0.9 0 0.01"></a-entity>
+        <a-entity id="instagram" website-link="url: http://instagram.com" geometry="primitive: plane; height: 0.9; width: 0.9" raycastable material="shader: flat; src: https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Finstagram-square-flat-2-512.png?v=1562779143859" position="0 0 0.01"></a-entity>
+        <a-entity id="facebook" website-link="url: http://facebook.com" geometry="primitive: plane; height: 0.9; width: 0.9" raycastable material="shader: flat; src: https://cdn.glitch.com/30c85152-7785-4a8c-8ec4-b836bad15a17%2Ficon-facebook-square-png.png?v=1562779143024" position="0.9 0 0.01"></a-entity>
+      </a-entity>
+
+
     </a-scene>
     <div id="cameraObserver"></div>
+    <script>
+      // On mobile remove elements that are resource heavy
+      var isMobile = AFRAME.utils.device.isMobile();
+
+      if (isMobile) {
+        var particles = document.getElementById('particles');
+        particles.parentNode.removeChild(particles);
+      }
+      
+      // Define custom schema for syncing avatar color, set by random-color
+      NAF.schemas.add({
+        template: '#avatar-template',
+        components: [
+          'position',
+          'rotation',
+          {
+            selector: '.head',
+            component: 'material',
+            property: 'color'
+          }
+        ]
+      });
+    </script>
   </body> 
 </html>
